# ssa

./: .gitignore  CMakeLists.txt  README.md  ssa-2d.ini  ssa.ini
cmake_modules/FindCUDA/.svn/: all-wcprops  entries
example/alufr_black_mug/: alufr_black_mug_raw00000.pcd  alufr_black_mug_raw00001.pcd  alufr_black_mug_raw00002.pcd  alufr_black_mug_raw00003.pcd  alufr_black_mug_raw00004.pcd  alufr_black_mug_raw00005.pcd  alufr_black_mug_raw00006.pcd  alufr_black_mug_raw00007.pcd  alufr_black_mug_raw00008.pcd  alufr_black_mug_raw00009.pcd  alufr_black_mug_raw00010.pcd  alufr_black_mug_raw00011.pcd  alufr_black_mug_raw00012.pcd  alufr_black_mug_raw00013.pcd  alufr_black_mug_raw00014.pcd  alufr_black_mug_raw00015.pcd  alufr_black_mug_raw00016.pcd  alufr_black_mug_raw00017.pcd  alufr_black_mug_raw00018.pcd  alufr_black_mug_raw00019.pcd  alufr_black_mug_raw00020.pcd  alufr_black_mug_raw00021.pcd  alufr_black_mug_raw00022.pcd  alufr_black_mug_raw00023.pcd  alufr_black_mug_raw00024.pcd  alufr_black_mug_raw00025.pcd  alufr_black_mug_raw00026.pcd  alufr_black_mug_raw00027.pcd  alufr_black_mug_raw00028.pcd  alufr_black_mug_raw00029.pcd  alufr_black_mug_raw00030.pcd  alufr_black_mug_raw00031.pcd  alufr_black_mug_raw00032.pcd  alufr_black_mug_raw00033.pcd  alufr_black_mug_raw00034.pcd  alufr_black_mug_raw00035.pcd  alufr_black_mug_raw00036.pcd  alufr_black_mug_raw00037.pcd  alufr_black_mug_raw00038.pcd  alufr_black_mug_raw00039.pcd  (+20 more)
example/freiburg079/: fr079.gm2dl
import/: CMakeLists.txt
import/alu_posegraph_2d/: CMakeLists.txt  import_posegraph2d.cpp  import_posegraph2d.h  posegraph2ssa.cpp  ssa2posegraph.cpp
import/ssa_to_pgm/: CMakeLists.txt  gridlinetraversal.h  ssa_to_map.cpp
pcl_binding/: CMakeLists.txt  pcd_add_normal.cpp  pcd_ssa_test.cpp  pcd_to_ssa.cpp  pcd_to_ssa_rgb.cpp  pcl_g2o_math_conversion.h  pcl_ssa_hierarchical.h  pcl_ssa_hierarchical.hpp  ply_to_ssa_rgb.cpp  ssa_to_pcd.cpp
ssa/: CMakeLists.txt
ssa/apps/: CMakeLists.txt
ssa/apps/ssa_cli/: CMakeLists.txt  ssa_optimize_3d.cpp  ssa_optimize_3d_cuda.cpp  ssa_optimize_hierarchical_3d.cpp
ssa/apps/ssa_tools/: CMakeLists.txt  ssa_constructor_benchmark.cpp  ssa_dump_matrix.cpp
ssa/apps/ssa_viewer_2d/: CMakeLists.txt  base_main_window.ui  ssa_2d_qglviewer_widget.cpp  ssa_2d_qglviewer_widget.h  ssa_viewer_2d.cpp
ssa/apps/ssa_viewer_3d/: CMakeLists.txt  base_main_window.ui  ssa_3d_qglviewer_widget.cpp  ssa_3d_qglviewer_widget.h  ssa_viewer_3d.cpp
ssa/apps/ssa_viewer_rgba/: CMakeLists.txt  base_main_window.ui  ssa_rgba_qglviewer_widget.cpp  ssa_rgba_qglviewer_widget.h  ssa_viewer_rgba.cpp  standardCamera.h
ssa/core/: CMakeLists.txt  allocate_solver.h  local_neighborhood.h  local_neighborhood.hpp  observation.h  observation.hpp  parameter.h  sparse_surface_adjustment.h  sparse_surface_adjustment.hpp  ssa_graph.h  ssa_graph.hpp  ssa_graph_2d.h  ssa_graph_3d.h  ssa_sparse_optimizer.cpp  ssa_sparse_optimizer.h
ssa/data_association/: CMakeLists.txt  correspondence.h  correspondence_rejection.h  correspondence_rejection.hpp  data_association.h  data_association.hpp  local_refinement.h  local_refinement.hpp  nearest_neighbor_brute_force.h  nearest_neighbor_brute_force.hpp  nearest_neighbor_kdtree.h  nearest_neighbor_kdtree.hpp  normal_shooting_flann.h  normal_shooting_flann.hpp  representative_subset.h  ssa_test_data_association.cpp
ssa/kdtree_flann/: CMakeLists.txt  kdtree_flann.h  kdtree_flann.hpp
ssa/sensor_models/: CMakeLists.txt  laser_sensor_model_2d.cpp  laser_sensor_model_2d.h  rgbd_sensor_model.h
ssa/solvers/: CMakeLists.txt
ssa/solvers/pcg_cuda/: CMakeLists.txt  linear_solver_pcg_cuda.h  pcg_cuda.cu  pcg_cuda.h  solver_pcg_cuda.cpp  test_pcg_cuda.cpp
ssa/solvers/pcg_cusp/: CMakeLists.txt  linear_solver_pcg_cusp.h  pcg_cusp.cu  pcg_cusp.h  solver_pcg_cusp.cpp
ssa/types/: CMakeLists.txt  edge_se2_xycov.cpp  edge_se2_xycov.h  edge_xycov_xycov.cpp  edge_xycov_xycov.h  types_ssa2d.cpp  vertex_point_xycov.cpp  vertex_point_xycov.h
ssa/types_3d/: CMakeLists.txt  edge_se3_point_xyz_normal.cpp  edge_se3_point_xyz_normal.h  edge_se3_xyzcov.cpp  edge_se3_xyzcov.h  edge_xyzcov_xyzcov.cpp  edge_xyzcov_xyzcov.h  edge_xyznormal_xyznormal.cpp  edge_xyznormal_xyznormal.h  observation_point_xyz_rgb_normal.cpp  observation_point_xyz_rgb_normal.h  types_ssa3d.cpp  vertex_point_xyz_normal.cpp  vertex_point_xyz_normal.h  vertex_point_xyzcov.cpp  vertex_point_xyzcov.h
