CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

IF(CUDA_FOUND AND SSA_USE_CUSP)
  ADD_SUBDIRECTORY(pcg_cuda)
  ADD_SUBDIRECTORY(pcg_cusp)
ENDIF(CUDA_FOUND AND SSA_USE_CUSP)

# IF(G2O_BUILD_APPS)
#   ADD_SUBDIRECTORY(apps)
# ENDIF(G2O_BUILD_APPS)
# 
# ADD_SUBDIRECTORY(math_groups)
# 
# # Pre-canned types
# ADD_SUBDIRECTORY(types)
# 
# # Solvers
# ADD_SUBDIRECTORY(solvers)
# 
# # Examples
# IF(G2O_BUILD_EXAMPLES)
#   ADD_SUBDIRECTORY(examples)
# ENDIF(G2O_BUILD_EXAMPLES)
