CUDA_INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CUSP_INCLUDE_DIR}
)

INCLUDE_DIRECTORIES(${QGLVIEWER_INCLUDE_DIR} ${CMAKE_BINARY_DIR} ${QT_QTCORE_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${QT_QTCORE_INCLUDE_DIR}/.. ${CHOLMOD_INCLUDE_DIR} ${CSPARSE_INCLUDE_DIR} ${CUDA_SDK_ROOT_DIR}/shared/inc/ ${CUDA_SDK_ROOT_DIR}/C/common/inc/ ${CUDA_INCLUDE_DIRS} ${CUSP_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS} ${CUDA_SDK_ROOT_DIR}/shared/inc/ ${CUDA_SDK_ROOT_DIR}/C/common/inc/)
set(BUILD_SHARED_LIBS ON)

CUDA_ADD_EXECUTABLE(test_pcg_cuda
  test_pcg_cuda.cpp
)

TARGET_LINK_LIBRARIES(test_pcg_cuda ssa_core types_3d g2o_types_slam3d g2o_stuff g2o_core g2o_solver_cholmod ${CHOLMOD_LIBRARIES} ${BLAS_LIBRARIES} g2o_solver_csparse ${CSPARSE_LIBRARY} flann ${QGLVIEWER_LIBRARY} ${QT_QTXML_LIBRARY} ${QT_QTOPENGL_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTCORE_LIBRARY} ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} ${CUDA_LIBRARIES} ${CUDA_cublas_LIBRARY} ${CUDA_cusparse_LIBRARY} pcg_cuda solver_pcg_cuda ${CUDA_SDK_LIBRARIES})


CUDA_ADD_LIBRARY(pcg_cuda 
  pcg_cuda.cu pcg_cuda.h
)

CUDA_ADD_LIBRARY(solver_pcg_cuda ${G2O_LIB_TYPE}
  solver_pcg_cuda.cpp linear_solver_pcg_cuda.h
)

SET_TARGET_PROPERTIES(solver_pcg_cuda PROPERTIES OUTPUT_NAME ${LIB_PREFIX}solver_pcg_cuda)

TARGET_LINK_LIBRARIES(solver_pcg_cuda core ${CUDA_LIBRARIES} pcg_cuda)

INSTALL(TARGETS solver_pcg_cuda
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")

INSTALL(FILES ${headers} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ssa/solvers/pcd_cuda)
