CUDA_INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CUSP_INCLUDE_DIR}
)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR} ${CUDA_SDK_ROOT_DIR}/shared/inc/ ${CUDA_SDK_ROOT_DIR}/C/common/inc/ ${CUDA_INCLUDE_DIRS} ${CUSP_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS} ${CUDA_SDK_ROOT_DIR}/shared/inc/ ${CUDA_SDK_ROOT_DIR}/C/common/inc/)
set(BUILD_SHARED_LIBS ON)

CUDA_ADD_LIBRARY(pcg_cusp ${G2O_LIB_TYPE}
  pcg_cusp.cu pcg_cusp.h
)

CUDA_ADD_LIBRARY(solver_pcg_cusp ${G2O_LIB_TYPE}
  solver_pcg_cusp.cpp linear_solver_pcg_cusp.h
)

SET_TARGET_PROPERTIES(solver_pcg_cusp PROPERTIES OUTPUT_NAME ${LIB_PREFIX}solver_pcg_cusp)

TARGET_LINK_LIBRARIES(solver_pcg_cusp core ${CUDA_LIBRARIES} pcg_cusp)

INSTALL(TARGETS solver_pcg_cusp
  RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
  LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
  ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib
)

FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/*.h" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")

INSTALL(FILES ${headers} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/ssa/solvers/pcd_cusp)
